fix portrait alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@ body {
 }
 
 .jumbotron {
-  /* background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Portland_Night_panorama.jpg"); */
-/************************************ FIX IMAGE URL ****************************************************/
   background-image: url("../img/Portland_Night_panorama.jpg");
   background-size: cover;
   border-radius: 3.5em;
@@ -110,7 +108,6 @@ li span:hover + #follow-localizer {
 li span:hover + #follow-trades {
   display: block;
 }
-
 
 #follow-games {
   display: none;
@@ -222,78 +219,11 @@ li span:hover + #follow-analyst {
   display: none;
 }
 
-/* #whatever .test .test-block:hover ~ .test-div {
-  background-color: purple;
-} */
-
-/* #btn:hover + .zz {} */
-
-
-/************************************************************/
-
-
-/* .about-me:hover {
-  background-color: turquoise;
-  /* visibility: visible; */
-  /* display: inline; */
-  /* width: 12em;
-} */
-
 .block {
   display: block;
   margin-right: 5em;
   clear: right;
 }
-
-
-/* #writer:hover ~ .writer-block {
-  visibility: visible;
-  display: block;
-} */
-
-/* .zz {
-  text-align: center;
-  line-height: 100px;
-  font-size: 20px;
-  font-weight: bold;
-  width: 100px;
-  height: 100px;
-  color: white;
-  background: red;
-  border: 4px solid black;
-  margin: 100px;
-  -webkit-transition: transform 1s;
-  -webkit-transition-timing: ease-in-out;
-  -webkit-transition-delay: 0.1s;
-  float: left;
-}
- */
-/* #btn:hover + .zz {
-  background: green;
-  -webkit-transform: rotate(40deg) translate(100px, 20px);
-} */
-
-/* #writer:hover ~ .writer-block {
-  background: green;
-  -webkit-transform: rotate(40deg) translate(100px, 20px);
-} */
-
-/* #writer:hover {
-  color: red;
-} */
-
-/* #writer:hover ~ li {
-  color: red;
-} */
-
-
-
-
-/* #writer:hover + .zz {
-  background: green;
-  -webkit-transform: rotate(40deg) translate(100px, 20px);
-} */
-
 
 .backdrop {
   background-color: rgba(0, 0, 255, 0.5);
@@ -312,15 +242,17 @@ li span:hover + #follow-analyst {
 }
 
 .portrait {
-  min-width: 13%;
-  max-width: 22%;
-  top: auto;
-  left: auto;
+  min-width: 14%; /* was 13 mesing around */
+  max-width: 24%;
+  /* top: auto; */
+  /* left: auto; */
+  left: 73%;
   position: absolute;
   z-index: 25;
   float: right;
-  right: 5em;
-  margin-right: 10em;
+  right: 14em;
+  /* right: auto; */
+  /* margin-right: 10em; */
   top: 4.5em;
   width: 120px;
   border: 5px solid gray;
@@ -400,37 +332,3 @@ li span:hover + #follow-analyst {
   position: absolute;
   width: 57%
 }
-
-/*h1, h2, h3, p {
-  background-color: rgba(0, 0, 255, 0.5);
-  color: #ffffff;
-}*/
-
-/*body {
-  background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Made_in_Oregon_sign_in_2011_-_Portland_Oregon.JPG");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: rgba(255,255,0,0.275);
-}
-/*
-@media screen and (min-width: 768px) {
-  .column {
-    width: 300px;
-    float: left;
-    padding: 20px;
-  }
-}
-@media screen and (max-width: 768px) and (min-width: 600px) {
-  body {
-    background-color: black;
-    color: white;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  body {
-    background-color: teal;
-  }
-}
-
-*/
